Bug 438078 - Backup Plan 1 -- Purger
Summary: Backup Plan 1 -- Purger
Status: RESOLVED FIXED
Alias: None
Product: kup
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Persson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-04 09:23 UTC by Genneret
Modified: 2021-06-05 19:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Genneret 2021-06-04 09:23:42 UTC
SUMMARY
At start of session, a new window start "Backup Plan 1-- Purger" with all my backup . I have 2 actions : Quit or "Delete" the backup items.

STEPS TO REPRODUCE
1. every boot
2. every start my session
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.21.5
(available in About System)
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Genneret 2021-06-04 14:35:22 UTC
I removed the "Backup plan" and removed all backup files . I make a new "backup plan" . I'm waiting the new backups .
Comment 2 Genneret 2021-06-04 17:54:38 UTC
Same problem after the clear of configuration of Backup Plan . A window is opened with "Backup plan PURGER"
Comment 3 Simon Persson 2021-06-05 05:21:42 UTC
Git commit c0503af8b057aa66b8ba76e26f4fc0f630774102 by Simon Persson.
Committed on 05/06/2021 at 05:21.
Pushed by persson into branch 'master'.

Bugfix for unintentional start of kup-purger

Had forgotten to initialize member variable to false.

M  +1    -1    daemon/edexecutor.cpp

https://invent.kde.org/system/kup/commit/c0503af8b057aa66b8ba76e26f4fc0f630774102
Comment 4 Genneret 2021-06-05 19:03:18 UTC
You are find the solution . How to apply the solution ?. Thanks
Comment 5 Genneret 2021-06-05 19:17:59 UTC
Compilation with source on https://github.com/KDE/kup
Comment 6 Genneret 2021-06-05 19:23:43 UTC
All is good , the kup application upgraded . Thanks for you help.