Bugfix for unintentional start of kup-purger

Had forgotten to initialize member variable to false.
BUG: 438078